// プラグイン(Gradle plugin repositoryから取得）
// https://plugins.gradle.org/
plugins {
	// Springのサポート（実行など）id "org.springframework.boot" version "2.3.1.RELEASE"
	id 'org.springframework.boot' version '2.3.1.RELEASE'
	// Springの依存関係管理
	id 'io.spring.dependency-management' version '1.0.9.RELEASE'
	// javaのコンパイル、テスト
	id 'java'
}

// プロジェクトのグループID
group = 'jp.spring.boot.ems'
// プロジェクトのバージョン
version = '0.0.1-SNAPSHOT'
// プロジェクトの説明
description = 'EMS'
// JDKバージョン（変数を上書きする事で実行時にバージョンを変えることが可能）
sourceCompatibility = '1.8'

// ライブラリ探索場所
repositories {
	// Maven Repository
	mavenCentral()
}

// 必要なライブラリ（Maven Repositpry）
dependencies {
	// implementation：コンパイル時に使用
	// testImplementation:テストプログラムのコンパイル時に使用
	// runtimeOnly：コンパイル時不要、実行時仕様
    implementation 'org.springframework.boot:spring-boot-starter'//:2.3.1.RELEASE'
    implementation 'org.springframework.boot:spring-boot-starter-web'//:2.3.1.RELEASE'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'//:2.3.1.RELEASE'
    implementation 'org.springframework.boot:spring-boot-starter-validation'//:2.3.1.RELEASE'
    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'//:2.3.1.RELEASE'
    implementation 'org.springframework.boot:spring-boot-starter-security'//:2.3.1.RELEASE'
    implementation 'org.projectlombok:lombok:1.18.12'
    implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity4:3.0.4.RELEASE'
    implementation 'org.webjars:bootstrap:4.3.0'
    implementation 'org.webjars:jquery:3.4.0'
    implementation 'org.webjars:ace:1.3.3'
    implementation 'com.ninja-squad:DbSetup:2.1.0'
    implementation 'org.flywaydb:flyway-core:6.5.1'
    implementation 'org.webjars:bootstrap:4.5.0'    
    
    runtimeOnly 'com.h2database:h2:1.4.200'
    runtimeOnly 'mysql:mysql-connector-java:8.0.20'
//    testImplementation 'org.springframework.boot:spring-boot-starter-test:2.3.1.RELEASE'
    testImplementation('org.springframework.boot:spring-boot-starter-test'/*:2.3.1.RELEASE'*/) {
        exclude group: 'junit', module:'junit'
        exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
    }
    testImplementation 'org.springframework.security:spring-security-test:5.3.3.RELEASE'
    testImplementation 'org.assertj:assertj-core:3.16.0'
    testImplementation 'org.junit.platform:junit-platform-surefire-provider:1.3.2'
    testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.6.2'
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.2'
//    testImplementation 'org.junit.vintage:junit-vintage-engine:5.7.0-M1'
    testImplementation 'org.flywaydb.flyway-test-extensions:flyway-spring-test:6.4.0'
    testImplementation 'org.mockito:mockito-core:3.3.3'
//    testImplementation 'org.hamcrest:hamcrest-all:1.3'
}
/*
publishing {
    publications {
        maven(MavenPublication) {
            from(components.java)
        }
    }
}

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}
*/

// テスト処理
test {
	// JUnitプラットフォームを使用（？）
	useJUnitPlatform()
}
